--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.6.3"
   },
   "scripts": {
