--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "national-dex",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "^10.16",
+    "npm": "^6.9"
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "node-sass": "^4.12.0",
@@ -18,11 +22,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint": "tslint -c tslint.json 'src/**/*.tsx'",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.18",
+    "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.12",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
@@ -31,11 +37,9 @@
     "axios-mock-adapter": "^1.17.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
-    "redux-devtools": "^3.5.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-react": "^4.1.0",
-    "typescript": "^3.6.4"
+    "tslint-react": "^4.1.0"
   },
   "browserslist": {
     "production": [
