--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
 	"name": "national-dex",
 	"version": "1.0.0",
 	"private": true,
-	"engines": {
-		"node": "^10.16",
-		"npm": "^6.9"
-	},
 	"dependencies": {
+		"@types/isomorphic-fetch": "^0.0.35",
 		"axios": "^0.19.0",
+		"isomorphic-fetch": "^2.2.1",
 		"node-sass": "^4.12.0",
 		"react": "^16.10.2",
 		"react-dom": "^16.10.2",
@@ -15,8 +13,17 @@
 		"react-scripts": "3.2.0",
 		"redux": "^4.0.4",
 		"redux-promise": "^0.6.0",
+		"redux-saga": "^1.1.3",
 		"redux-thunk": "^2.3.0",
+		"styled-components": "^4.4.1",
+		"tslib": "^1.10.0",
+		"typesafe-actions": "^5.1.0",
 		"typescript": "^3.6.3"
+	},
+	"jest": {
+		"snapshotSerializers": [
+			"enzyme-to-json/serializer"
+		]
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -24,6 +31,7 @@
 		"test:dev": "react-scripts test --coverage",
 		"test": "react-scripts test --coverage --watchAll=false && codecov",
 		"postest": "codecov",
+		"test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
 		"lint": "tslint -c tslint.json 'src/**/*.tsx'",
 		"format": "prettier --write \"src/**/*.+(js|jsx|tsx|ts|json|css|scss|md)\"",
 		"eject": "react-scripts eject"
@@ -37,10 +45,13 @@
 		"@types/react-dom": "^16.9.1",
 		"@types/react-redux": "^7.1.4",
 		"@types/redux-promise": "^0.5.28",
+		"@types/styled-components": "^4.1.19",
 		"axios-mock-adapter": "^1.17.0",
 		"codecov": "^3.6.1",
 		"enzyme": "^3.10.0",
 		"enzyme-adapter-react-16": "^1.15.1",
+		"enzyme-to-json": "^3.4.2",
+		"jest-styled-components": "^6.3.3",
 		"prettier": "^1.18.2",
 		"tslint": "^5.20.0",
 		"tslint-config-prettier": "^1.18.0",
